--- a/ytd2large.csproj
+++ b/ytd2large.csproj
@@ -59,10 +59,10 @@
   <PropertyGroup />
   <PropertyGroup />
   <PropertyGroup>
-    <ManifestCertificateThumbprint>E28B1BF829C7287B88F5DE6066C014C29C06BA41</ManifestCertificateThumbprint>
+    <ManifestCertificateThumbprint>22F593C337BBD1906303F3CDEFE3F9CB4D5C1D90</ManifestCertificateThumbprint>
   </PropertyGroup>
   <PropertyGroup>
-    <ManifestKeyFile>GTA5 RPF FiveM Convertor_TemporaryKey.pfx</ManifestKeyFile>
+    <ManifestKeyFile>AssemblySign.pfx</ManifestKeyFile>
   </PropertyGroup>
   <PropertyGroup>
     <GenerateManifests>false</GenerateManifests>
@@ -78,13 +78,14 @@
     <StartupObject />
   </PropertyGroup>
   <PropertyGroup>
-    <SignAssembly>true</SignAssembly>
+    <SignAssembly>false</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
     <ApplicationManifest>Properties\app.manifest</ApplicationManifest>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>AssemblySign.pfx</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>
+    </AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -235,7 +236,6 @@
       <DesignTime>True</DesignTime>
     </Compile>
     <None Include="app.config" />
-    <None Include="AssemblySign.pfx" />
     <None Include="packages.config" />
     <None Include="Resources\delspace.bat" />
     <None Include="Properties\app.manifest" />
@@ -276,9 +276,6 @@
     </PackageReference>
     <PackageReference Include="Pfim">
       <Version>0.10.1</Version>
-    </PackageReference>
-    <PackageReference Include="SharpCompress">
-      <Version>0.25.0</Version>
     </PackageReference>
     <PackageReference Include="SharpDX">
       <Version>4.2.0</Version>
