--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -23,12 +23,11 @@ jobs:
           
       - name: Extract artifact
         run: Expand-Archive -Path artifact.zip
+          shell: pwsh
           
-      - name: Copy example.rpf from .github/workflows folder
-        uses: canastro/copy-file-action@master
-        with:
-          source: "./.github/workflows/example.rpf"
-          target: "./bin/Release/input/"
+      - name: Extract artifact
+        run: Move-Item -Path .github/workflows/example.rpf -Destination bin/Release/Input
+          shell: pwsh
           
       - name: Run
         run: ./bin/Release/ytd2large.exe --debug
