--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -19,13 +19,10 @@ jobs:
         with:
           workflow: dotnet.yml
           workflow_conclusion: success
-          name: Executable Artifact
+          name: artifact
           
       - name: Extract artifact
-        run: Expand-Archive -Path artifact.zip
-          
-      - name: Extract artifact
-        run: Move-Item -Path ./Resources/example.rpf -Destination ./bin/Release/Input
+        run: Move-Item -Path ./Resources/example.rpf -Destination ./bin/Release/input
           
       - name: Run
         run: ./bin/Release/ytd2large.exe --debug
